--- a/SE/.classpath
+++ b/SE/.classpath
@@ -2,6 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/jre7/lib/ext/mysql-connector-java-3.1.12-bin.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jre1.8.0_20/lib/ext/mysql-connector-java-3.1.12-bin.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jre1.8.0_20/lib/ext/ojdbc7.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jre1.8.0_20/lib/ext/mysql-connector-java-5.1.34-bin.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
